--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,8 @@
 .react-grid-item.react-grid-placeholder {
   background-color: var(--chakra-colors-gray-300);
 }
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
