--- a/styles/global.scss
+++ b/styles/global.scss
@@ -11,7 +11,7 @@
 .typo blockquote {
   position: relative;
   font-weight: 400;
-  border-left: 1px solid #1abc9c;
+  border-left: 1px solid var(--chakra-colors-cardBorderColor);
   padding-left: 1em;
   margin: 1em 3em 1em 2em;
 }
@@ -54,8 +54,8 @@
 
 .typo code {
   font-size: 0.95em;
-  margin-inline-start: 0.15em;
-  margin-inline-end: 0.15em;
+  // margin-inline-start: 0.15em;
+  // margin-inline-end: 0.15em;
 }
 
 /* 去掉列表前的标识, li 会继承，大部分网站通常用列表来很多内容，所以应该当去 */
@@ -99,11 +99,12 @@
 
 /* 默认不显示下划线，保持页面简洁 */
 .typo a {
-  color: #0969DA;
+  color: #0969da;
 }
 
 .typo ins,
-.typo a, .typo a:hover {
+.typo a,
+.typo a:hover {
   text-decoration: none;
 }
 
@@ -180,7 +181,7 @@
 
 /* 提供 serif 版本的字体设置: iOS 下中文自动 fallback 到 sans-serif */
 .typo .serif {
-  // font-family: Palatino, Optima, Georgia, serif;
+  font-family: Palatino, Optima, Georgia, serif;
 }
 
 /* 保证块/段落之间的空白隔行 */
@@ -210,7 +211,7 @@ blockquote {
 .typo h4,
 .typo h5,
 .typo h6 {
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.35;
 }
 
@@ -360,10 +361,6 @@ blockquote {
   text-align: center;
 }
 
-.border-right {
-  border-right: 1px solid #ccc;
-}
-
 .pr-2 {
   padding-right: var(--chakra-sizes-2);
 }
@@ -385,7 +382,7 @@ blockquote {
 }
 
 .w-100 {
-  width: 100vw;
+  width: 100%;
 }
 
 .mb-2 {
@@ -401,11 +398,15 @@ blockquote {
 }
 
 .border-bottom {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--chakra-colors-cardBorderColor);
+}
+
+.border-right {
+  border-right: 1px solid var(--chakra-colors-cardBorderColor);
 }
 
 .rounded {
-  border-radius: 0.4em;
+  border-radius: 0.8em;
   overflow: hidden;
 }
 
