--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -367,6 +367,10 @@ blockquote {
 /* Responsive images */
 .typo img {
   max-width: 100%;
+  border-radius: 4px;
+  overflow: hidden;
+  min-height: 30px;
+  border: 1px solid rgba($color: #000000, $alpha: 0.2);
 }
 
 .d-inline-block {
