--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -1,4 +1,8 @@
-.react-grid-item.react-grid-placeholder {
+.no-select {
+  user-select: none;
+}
+
+.react-grid-item.react-grid-placeholder.react-grid-placeholder {
   background-color: var(--chakra-colors-gray-300);
 }
 
@@ -228,7 +232,7 @@ blockquote {
 .typo h4,
 .typo h5,
 .typo h6 {
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.35;
 }
 
@@ -257,24 +261,24 @@ blockquote {
 
 .typo h2,
 .typo-h2 {
-  font-size: 1.8em;
+  font-size: 1.6em;
 }
 
 .typo h3,
 .typo-h3 {
-  font-size: 1.6em;
+  font-size: 1.4em;
 }
 
 .typo h4,
 .typo-h4 {
-  font-size: 1.4em;
+  font-size: 1.2em;
 }
 
 .typo h5,
 .typo h6,
 .typo-h5,
 .typo-h6 {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 /* 在文章中，应该还原 ul 和 ol 的样式 */
@@ -432,4 +436,9 @@ blockquote {
 
 .text-info {
   color: var(--chakra-colors-green-300);
+}
+
+.code-num {
+  color: var(--chakra-colors-gray-600);
+  font-style: initial;
 }
