github compare support expand

--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -456,3 +456,15 @@ blockquote {
 .hljs-keyword {
   font-weight: 600;
 }
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
