--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -423,6 +423,10 @@ blockquote {
   margin-bottom: var(--chakra-sizes-2);
 }
 
+.mb-0.mb-0.mb-0 {
+  margin-bottom: 0;
+}
+
 .position-absolute {
   position: absolute;
 }
