--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -8,10 +8,10 @@
   background-color: var(--chakra-colors-gray-300);
 }
 
-::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
+// ::-webkit-scrollbar {
+//   width: 0;
+//   height: 0;
+// }
 
 /* 块/段落引用 */
 .typo blockquote {
