--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -478,6 +478,6 @@ blockquote {
   }
 }
 
-.diff-tailwindcss-wrapper {
-  color: black;
+*, *::before, *::after {
+  // border-color: currentColor;
 }
