--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -416,6 +416,10 @@ blockquote {
   overflow: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .overflow-auto {
   overflow: auto;
 }
