--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -488,3 +488,8 @@ blockquote {
 *::after {
   // border-color: currentColor;
 }
+
+::highlight(search-results) {
+  background-color: #f06;
+  color: white;
+}
